fix(zbugs): Fixing vertical shift of search input on focus (#3782)

--- a/apps/zbugs/src/index.css
+++ b/apps/zbugs/src/index.css
@@ -364,6 +364,8 @@ textarea.autoResize {
 
 .list-view-header.search-mode {
   margin: -5px;
+  position: relative;
+  top: -3px;
 }
 
 .sort-control-container {
